made changes to the CSS for fixing alignments

--- a/src/SP.css
+++ b/src/SP.css
@@ -5,7 +5,7 @@
 }
 
 .Maindiv{
-    margin: 50px;
+    margin-top: 50px;
     width: 100vw;
     height: 100vh;
     background-size: cover; 
